fix problema z-index menu

--- a/src/Partials/_footer.scss
+++ b/src/Partials/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   padding-top: 100px;
-  display: block;
+
   margin: auto;
   background-color: $footerColor;
   text-align: center;
