--- a/src/Partials/_header.scss
+++ b/src/Partials/_header.scss
@@ -1,6 +1,6 @@
 header {
   position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 
@@ -59,7 +59,7 @@ header {
   nav {
     align-items: center;
     position: fixed;
-    z-index: 40;
+    z-index: 39;
     top:0;
     height: 100px;
 
